--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPSAM Abrigo De Amor.</title>
+    <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
     <h1>Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
