--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
-    <h1>Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
-    
-    <img src="HTML/Logos/Logo.png" alt="Logo">
+    <h1 id="Titulo-Nombre">Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
 
+    <div class="caja">
+        <img src="HTML/Logos/Logo.png" alt="Logo">
+    </div>
+
+
+    <div class="caja">
     <a href="HTML/Page/QuienesSomos.html">¿Quienes Somos?.</a>
     <a href="HTML/Page/TrabajaConNosotros.html">Trabaja con nosotros.</a>
-    <a href="HTML/Page/Nuestrosvalores.html">Nuestros valores.</a>
     <a href="HTML/Page/Espacios.html">Espacios.</a>
+    </div>
+
+    <p id="Logo-en-letras" >Abrigo De Amor</p>
+    <p>¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios cpon calidad y calor humano para ti y tu ser querido.</p>
+
+
 
     <h2>Nuestros servicios:</h2>
     <ul>
