--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
-    <h1 id="Titulo-Nombre">Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
 
     <div class="caja">
         <img src="HTML/Logos/Logo.png" alt="Logo">
     </div>
+
+    <h1 id="Titulo-Nombre">Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
 
 
     <div class="caja">
@@ -21,7 +22,7 @@
     </div>
 
     <p id="Logo-en-letras" >Abrigo De Amor</p>
-    <p>¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios cpon calidad y calor humano para ti y tu ser querido.</p>
+    <p id="Texto-inicio">¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios cpon calidad y calor humano para ti y tu ser querido.</p>
 
 
 
