--- a/index.html
+++ b/index.html
@@ -8,36 +8,62 @@
 </head>
 <body>
 
-    <div class="caja">
-        <img src="HTML/Logos/Logo.png" alt="Logo">
+    <div class="imagenlogobox">
+        <img id= logocorazon src="HTML/Logos/Logo.png" alt="Logo">
     </div>
 
     <h1 id="Titulo-Nombre">Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.</h1>
 
 
     <div class="caja">
-    <a href="HTML/Page/QuienesSomos.html">¿Quienes Somos?.</a>
-    <a href="HTML/Page/TrabajaConNosotros.html">Trabaja con nosotros.</a>
-    <a href="HTML/Page/Espacios.html">Espacios.</a>
+        <div id="linknosotrosbox">
+            <a href="HTML/Page/QuienesSomos.html">¿Quienes Somos?.</a>
+        </div>
+        <div id="linktrabajabox">
+            <a href="HTML/Page/TrabajaConNosotros.html">Trabaja con nosotros.</a>            
+        </div>
+        <div id="linkespaciosbox"> 
+            <a href="HTML/Page/Espacios.html">Espacios.</a>
+        </div>
     </div>
 
-    <p id="Logo-en-letras" >Abrigo De Amor</p>
-    <p id="Texto-inicio">¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios cpon calidad y calor humano para ti y tu ser querido.</p>
+
+    <div class="boxpresentacion">
+        <p id="Logo-en-letras" >Abrigo De Amor</p>
+        <p id="Texto-inicio">¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios con calidad y calor humano para ti y tu ser querido.</p>
+    </div>
 
 
+<div class="servicioslista">
+    <div id="serviciosbox">
+        <h2>Nuestros servicios:</h2>
+    </div>
 
-    <h2>Nuestros servicios:</h2>
-    <ul>
-        <li>Cuidado de adultos mayores.</li>
-        <li>Enfermeria 24 horas.</li>
-        <li>Alimentacion balanceada.</li>
-        <li>Control medico y gerontologico.</li>
-        <li>Control nutricional.</li>
-        <li>Teapia fisica y ocupacional.</li>
-        <li>Lavanderia.</li>
-        <li>Servicios religiosos.</li>
-        <li>Habitaciones compartidas e individuales.</li>
-    </ul>
+    <div id="ulbox">
+        <ul>
+            <P>Cuidado de adultos mayores.</P>
+            <P>Enfermeria 24 horas.</P>
+            <P>Alimentacion balanceada.</P>
+            <P>Control medico y gerontologico.</P>
+            <P>Control nutricional.</P>
+            <P>Teapia fisica y ocupacional.</P>
+            <P>Lavanderia.</P>
+            <P>Servicios religiosos.</P>
+            <P>Habitaciones compartidas e individuales.</P>
+        </ul>
+    </div>
+</div>
+
+<div class="redesbox">
+    <p>Redes sociales:</p>
+    <a href="https://www.instagram.com/abrigodeamormedellin" target="_blank">Instagram</a>
+    <P></P>
+    <a href="https://www.facebook.com/profile.php?id=100063911390001" target="_blank">Facebook</a>
+    <P>Cel: 321 670 70 71</P>
+    <p>Tel: 601 XXX XX</p>
+    <P>Email: abrigodeamormedellin@gmail.com</P>
+
+</div>
 
 </body>
 
