--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class="boxpresentacion">
-        <p id="Logo-en-letras" >Abrigo De Amor</p>
+        <p id="Logo-en-letras" >Abrigo De Amor Carmen Elena</p>
         <p id="Texto-inicio">¡Hola! Somos un hogar que  brinda cuidados al adulto mayor, prestando servicios con calidad y calor humano para ti y tu ser querido.</p>
     </div>
 
