--- a/index.html
+++ b/index.html
@@ -16,67 +16,83 @@
         Centro De Protección Social Al Adulto Mayor (CPSAM) Abrigo De Amor.
       </h1>
     </div>
-
-    <div class="caja">
-      <div id="linknosotrosbox">
-        <a href="HTML/Page/QuienesSomos.html">¿Quienes Somos?.</a>
+    <div class="boxcolor">
+      <div class="caja">
+        <div id="linknosotrosbox">
+          <a href="HTML/Page/QuienesSomos.html">¿Quienes Somos?</a>
+        </div>
+        <div id="linktrabajabox">
+          <a href="HTML/Page/TrabajaConNosotros.html">Trabaja con nosotros</a>
+        </div>
+        <div id="linkespaciosbox">
+          <a href="HTML/Page/Espacios.html">Espacios</a>
+        </div>
       </div>
-      <div id="linktrabajabox">
-        <a href="HTML/Page/TrabajaConNosotros.html">Trabaja con nosotros.</a>
-      </div>
-      <div id="linkespaciosbox">
-        <a href="HTML/Page/Espacios.html">Espacios.</a>
-      </div>
-    </div>
 
-    <div class="boxpresentacion">
-      <p id="Logo-en-letras">Abrigo De Amor</p>
-      <p id="Texto-inicio">
-        ¡Hola! Somos un hogar que brinda cuidados al adulto mayor, prestando
-        servicios con calidad y calor humano para ti y tu ser querido.
-      </p>
-    </div>
-
-    <div class="boximagenes">
-      <img
-        id="peronaslogo"
-        src="HTML/Logos/Logo2.jpg"
-        alt="Imagen Abrigo de amor."
-      />
-
-      <div class="listabox">
-        <h2 class="serviciosh2">Nuestros servicios:</h2>
-        <ul class="lista">
-          <li>Cuidado de adultos mayores.</li>
-          <li>Enfermería 24 horas.</li>
-          <li>Alimentación balanceada.</li>
-          <li>Control médico y gerontológico.</li>
-          <li>Control nutricional.</li>
-          <li>Terapia física y ocupacional.</li>
-          <li>Lavandería.</li>
-          <li>Servicios religiosos.</li>
-          <li>Habitaciones compartidas e individuales.</li>
+      <div class="compo-imagenes">
+        <ul>
+          <li>
+            <img id="imagencarrucel" src="HTML/Imagenes/1.jpg" alt="Imagen">
+          </li>
+          <li>
+            <img id="imagencarrucel" src="HTML/Imagenes/5.jpg" alt="Imagen">
+          </li>
+          <li>
+            <img id="imagencarrucel" src="HTML/Imagenes/3.jpg" alt="Imagen">
+          </li>
+          <li>
+            <img id="imagencarrucel" src="HTML/Imagenes/4.jpg" alt="Imagen">
+          </li>
         </ul>
       </div>
-    </div>
 
+      <div class="boxpresentacion">
+        <p id="Logo-en-letras">Abrigo De Amor</p>
+        <p id="Texto-inicio">
+          ¡Hola! Somos un hogar que brinda cuidados al adulto mayor, prestando
+          servicios con calidad y calor humano para ti y tu ser querido.
+        </p>
+      </div>
+
+      <div class="boximagenes">
+        <img
+          id="peronaslogo"
+          src="HTML/Logos/Logo2.jpg"
+          alt="Imagen Abrigo de amor."
+        />
+
+        <div class="listabox">
+          <h2 class="serviciosh2">Nuestros servicios:</h2>
+          <ul class="lista">
+            <li>Cuidado de adultos mayores.</li>
+            <li>Enfermería 24 horas.</li>
+            <li>Alimentación balanceada.</li>
+            <li>Control médico y gerontológico.</li>
+            <li>Control nutricional.</li>
+            <li>Terapia física y ocupacional.</li>
+            <li>Lavandería.</li>
+            <li>Servicios religiosos.</li>
+            <li>Habitaciones compartidas e individuales.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="redesbox">
       <p>Redes sociales:</p>
       <a href="https://www.instagram.com/abrigodeamormedellin" target="_blank"
         >Instagram</a
       >
-      <div></div>
       <a
         href="pttps://www.facebook.com/profile.php?id=100063911390001"
         target="_blank"
         >Facebook</a
       >
-      <div></div>
       <a
         href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/@6.2549855,-75.5979759,17z/data=!3m1!4b1!4m6!3m5!1s0x8e44293c35c10a6d:0x25a504107dab84f4!8m2!3d6.2549802!4d-75.595401!16s%2Fg%2F11m1fppy32?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
         target="_blank"
         >Ubicación</a
       >
+      <a href="https://wa.me/573216707071" target="_blank">WhatsAap</a>
       <p>Cel: 321 670 70 71</p>
       <p>Tel: 601 XXX XX</p>
       <p>Email: abrigodeamormedellin@gmail.com</p>
