--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
       </div>
     </div>
     <div class="redesbox">
-      <p>Redes sociales:</p>
-      <a href="https://www.instagram.com/abrigodeamormedellin" target="_blank"
+      <h3 id="redesh3">Redes sociales:</h3>
+      <a class="link-sociales" href="https://www.instagram.com/abrigodeamormedellin" target="_blank"
         >Instagram</a
       >
       <a
-        href="pttps://www.facebook.com/profile.php?id=100063911390001"
+        class="link-sociales"  href="pttps://www.facebook.com/profile.php?id=100063911390001"
         target="_blank"
         >Facebook</a
       >
       <a
-        href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/@6.2549855,-75.5979759,17z/data=!3m1!4b1!4m6!3m5!1s0x8e44293c35c10a6d:0x25a504107dab84f4!8m2!3d6.2549802!4d-75.595401!16s%2Fg%2F11m1fppy32?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
+        class="link-sociales" href="https://www.google.com/maps/place/Hogar+geriátrico+abrigo+de+amor/@6.2549855,-75.5979759,17z/data=!3m1!4b1!4m6!3m5!1s0x8e44293c35c10a6d:0x25a504107dab84f4!8m2!3d6.2549802!4d-75.595401!16s%2Fg%2F11m1fppy32?entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"
         target="_blank"
         >Ubicación</a
       >
-      <a href="https://wa.me/573216707071" target="_blank">WhatsAap</a>
+      <a class="link-sociales" href="https://wa.me/573216707071" target="_blank">WhatsAap</a>
       <p>Cel: 321 670 70 71</p>
       <p>Tel: 601 XXX XX</p>
       <p>Email: abrigodeamormedellin@gmail.com</p>
